@@ -76,6 +76,10 @@
 #                           this regexp                                  any
 # context-name-pattern      true if SNMP peer ContextName matches this
 #                           regexp                                       any
+# pdu-type-pattern          true if SNMP Request PDU sent by peer matches
+#                           specified type(s) (SET/GET/GETNEXT/GETBULK)  any
+# oid-prefix-pattern        true if SNMP Request PDU sent by peer carries
+#                           OIDs that match regexp in the list           any
 # original-credentials-id   Distant SNMP peer ID                         any
 # matching-trunk-id-list    true if source trunk ID is present in this
 #                           list                                         any
@@ -110,6 +114,7 @@ program-name: snmpfwd-client
 #snmp-debug-categories: dsp,io
 
 peers-group {
+#  # use original context info
 #  context-engine-id: ${context-engine-id}
 #  context-name: ${context-name}
 
@@ -247,6 +252,9 @@ trunking-group {
 original-credentials-group {
   context-name-pattern: ""
 
+  pdu-type-pattern: .*
+  oid-prefix-pattern: .*
+
   snmp-engine-A {
     engine-id-pattern: 0x0102030405070809
     context-engine-id-pattern: 0x0102030405070809
@@ -266,7 +274,17 @@ original-credentials-group {
       v2c {
         security-name-pattern: abrakadabra
         security-model-pattern: 2
-        original-credentials-id: agent-config-1
+        original-credentials-id: agent-config-2
+
+        set-operations {
+          pdu-type-pattern: SET
+          original-credentials-id: agent-config-2-set
+        }
+
+        specific-gets {
+          oid-prefix-pattern: 1\.3\.6\.1\.2\.1\.2\.1\.0|1\.3\.6\.1\.2\.1\.2\.2\.0
+          original-credentials-id: agent-config-2-some-gets
+        }
       }
 
       v3 {
@@ -276,18 +294,18 @@ original-credentials-group {
           security-level-pattern: 3
           security-name-pattern: test.*
 
-          original-credentials-id: agent-config-1
+          original-credentials-id: agent-config-3
 
           context-two {
             context-name-pattern: mycontext2
-            original-credentials-id: agent-config-2
+            original-credentials-id: agent-config-3-1
           }
         }
 
         my-user-2 {
           security-level-pattern: 1
           security-name-pattern: testuser
-          original-credentials-id: agent-config-15
+          original-credentials-id: agent-config-3-2
         }
       }
     }
@@ -313,7 +331,7 @@ original-credentials-group {
 
         context-two {
           context-name-pattern: mycontext2
-          original-credentials-id: config-4
+          original-credentials-id: config-3-1
         }
       }
     }
@@ -324,12 +342,18 @@ routing-map {
   route-1 {
     matching-trunk-id-list: servertrunk
     matching-original-credentials-id-list: agent-config-1
-    using-peer-id-list: snmplabs-v1
+    using-peer-id-list: snmplabs-v3
   }
   
   route-2 {
     matching-trunk-id-list: clienttrunk
     matching-original-credentials-id-list: agent-config-2
     using-peer-id-list: localhost-v1
+  }
+
+  route-3 {
+    matching-trunk-id-list: clienttrunk
+    matching-original-credentials-id-list: agent-config-2-set
+    using-peer-id-list: localhost-v2c
   }
 }
