@@ -128,7 +128,7 @@ credentials-group {
         community-name: abrakadabra
         security-name: abrakadabra
         security-model: 2
-        credentials-id: config-1
+        credentials-id: config-2
       }
 
       v3 {
@@ -189,7 +189,7 @@ context-group {
 
 content-group {
   pdu-type-pattern: .*
-  oid-prefix-pattern-list: 1\.3\.6
+  oid-prefix-pattern-list: 1\.3\.6\..*
 
   # ordering of oid-prefix-pattern-list is important here
 
@@ -199,7 +199,7 @@ content-group {
   }
 
   if-subtree-group {
-    oid-prefix-pattern-list: 1\.3\.6\.1\.2\.1\.2
+    oid-prefix-pattern-list: 1\.3\.6\.1\.2\.1\.2\..*
     content-id: if-subtree-content
   }
   
@@ -257,7 +257,8 @@ routing-map {
   
   route-3 {
     matching-credentials-id-list: config-2
-    matching-peer-id-list: 111
+    matching-content-id-list: set-content
+    matching-peer-id-list: 111 100
     using-trunk-id-list: clienttrunk
   }
 }
